--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -3,6 +3,18 @@
 <% end %>
 <p class="lead"><%= "Zoznam hráčov sezóny #{selected_season.name} (#{@enrollments.count})" %></p>
 <% if @enrollments.any? %>
+  <div class="row">
+    <div class="col">
+      <div class="input-group my-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">
+            <%= fa_icon 'search' %>
+          </div>
+        </div>
+        <input type="text" class="form-control js-filter" data-target="players" placeholder="meno hráča" style="max-width: 720px;">
+      </div>
+    </div>
+  </div>
   <div class="table-responsive my-1">
     <table class="table table-sm">
       <thead class="thead-dark">
@@ -15,10 +27,10 @@
         <% end %>
       </tr>
       </thead>
-      <tbody>
+      <tbody class="players">
       <% @enrollments.each do |enrollment| %>
         <tr>
-          <td><%= link_to player_name_by_consent(enrollment.player, current_user), player_path(enrollment.player), class: 'quiet-link' %></td>
+          <td><span class="js-filterable"><%= link_to player_name_by_consent(enrollment.player, current_user), player_path(enrollment.player), class: 'quiet-link' %></span></td>
           <td><%= I18n.localize(enrollment.created_at, format: :date_month_year) %></td>
           <td><span class="badge badge-pill badge-light"><%= enrollment.player.category.name %></span></td>
           <% if user_signed_in? %>
