--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -20,14 +20,7 @@
 <% if @rankings.any? %>
   <div class="row">
     <div class="col">
-      <div class="input-group my-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <%= fa_icon 'search' %>
-          </div>
-        </div>
-        <input type="text" class="form-control js-filter" data-target="rankings" placeholder="meno hráča" style="max-width: 720px;">
-      </div>
+      <%= render 'shared/js_filter', target_table_body: 'rankings', placeholder: 'meno hráča' %>
     </div>
   </div>
   <% if @last_update_time.present? %>
