Player filter field narrowed

--- a/app/views/shared/_js_filter.html.erb
+++ b/app/views/shared/_js_filter.html.erb
@@ -4,7 +4,6 @@
       <%= fa_icon 'search' %>
     </div>
   </div>
-  <%= content_tag :input, '', type: :search, class: 'form-control js-filter',
-                  data: { target: target_table_body }, placeholder: placeholder,
-                  style: 'max-width: 720px;' %>
+  <%= content_tag :input, '', type: :search, class: 'form-control js-filter max-width-340',
+                  data: { target: target_table_body }, placeholder: placeholder %>
 </div>
