--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -16,7 +16,7 @@
     <div class="col">
       <p class="lead text-center">
         Úspešnosť hry
-        <span data-toggle="tooltip" data-placement="top" title="Pomer vyhratých gemov ku všetkým odohraným">
+        <span data-toggle="tooltip" data-placement="top" title="Pomer vyhratých gemov ku všetkým odohratým">
           <%= fa_icon 'question-circle' %>
         </span>
       </p>
@@ -86,22 +86,28 @@
     </div>
   </div>
 </div>
-<hr>
-<div class="row">
-  <div class="col">
-    <p class="lead text-center">
-      <%= "Zápasy sezóny #{selected_season.name}" %>
-    </p>
-    <%= render 'matches/table', matches: PlayerSeasonMatchesQuery.call(player: @player, season: selected_season)
-        .includes(:round, :winner, player1: :rankings, player2: :rankings) %>
+
+<% @player.enrollments.joins(:season).order('seasons.position desc').includes(:season).each do |enrollment| %>
+  <hr>
+  <div class="row">
+    <div class="col">
+      <p class="lead text-center">
+        <%= "Zápasy sezóny #{enrollment.season.name}" %>
+      </p>
+      <%= render 'matches/table', matches: PlayerSeasonMatchesQuery.call(player: @player, season: enrollment.season)
+          .includes(:round, :winner, player1: :rankings, player2: :rankings), js_filter_target: "matches-#{enrollment.season.position}" %>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <p>
-      Prihlásenie do sezóny • <%= I18n.localize(
-                                      selected_season.enrollments.find_by(player: @player).created_at,
-                                      format: :date_month_year) %>
-    </p>
+  <div class="row">
+    <div class="col">
+      <p>
+        Prihlásenie do sezóny • <%= I18n.localize(
+                                        enrollment.created_at,
+                                        format: :date_month_year) %>
+        <% if enrollment.canceled? %>
+          • <strong><i>(momentálne odhlásený/á)</i></strong>
+        <% end %>
+      </p>
+    </div>
   </div>
-</div>
+<% end %>
