--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -13,6 +13,7 @@
         <tr>
           <th class="phone-nr-width" scope="col">Hráč 1 - kurt</th>
           <th class="phone-nr-width" scope="col">Hráč 2 - lopty</th>
+          <th scope="col">Dátum</th>
           <th scope="col">Poznámka</th>
           <th scope="col">Výsledok</th>
           <th></th>
