About page content changed, renamed rspec helper

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,81 +1,95 @@
-<h1 class="display-4 text-center">Majstrovstvá Topoľčian v tenise</h1>
-<hr>
-<h4 class="text-center">
-  Súťaž je určená pre každého, kto si chce zahrať tenis s vyrovnanými súpermi počas celej sezóny,
-  na ktorýchkoľvek kurtoch v Topoľčanoch
-</h4>
-<hr>
-<p class="text-justify">
-  Zápasy sa budú hrať raz za 2 týždne, v čase, ktorý Vám a Vášmu súperovi vyhovuje a na ktorom
-  sa sami telefonicky dohodnete.
-</p>
-<p class="text-justify">
-  Hrá sa na 2 víťazné sety, pri skóre 1:1 na sety je 3.set supertiebreak do 10.
-  Hráči sa pred zápasom môžu dohodnúť, že 3.set odohrajú klasickým spôsobom.
-</p>
-<p class="text-justify">
-  Základná časť majstrovstiev bude žrebovaná <u>švajčiarskym systémom</u> na 9 zápasov (viď vysvetlené nižšie),
-  ktorý zabezpečí, že väčšinu súťaže hrajú lepší hráči s lepšími, strední so strednými a slabší so slabšími.
-  Na odohranie každého zápasu majú hráči vždy 2 týždne.
-</p>
-<p class="text-justify">
-  Základná časť súťaže začína vyžrebovaním prvého kola 3. mája 2019 a končí deviatym kolom 8. septembra 2019.
-</p>
-<p class="text-justify">
-  Hráč napísaný ako prvý si vyberie na ktorých kurtoch sa bude hrať a zaplatí kurt.
-  Hráč napísaný ako druhý donesie na zápas nové loptičky. Každý hráč bude približne rovnaký počet
-  zápasov napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú DUNLOP FORT, WILSON AO, HEAD ATP. Iné lopty možno použiť len so súhlasom súpera.
-</p>
-<p class="text-justify">
-  Po skončení základnej časti súťaže bude nasledovať finálový víkend 14.-15. septembra,
-  kedy sa stretnú 2 najlepší hráči vo finále v 4.kategóriách.
-  <ul>
-    <li>
-      starší ako 60 rokov
-    </li>
-    <li>
-      starší ako 50 rokov
-    </li>
-    <li>
-      neregistrovaní hráči (alebo registrovaní po 35 roku života)
-    </li>
-    <li>
-      registrovaní hráči
-    </li>
-  </ul>
-</p>
+<div class="row">
+  <div class="col-md-3 hidden-sm-down"></div>
+  <div class="col">
+    <h1 class="display-4 text-center">Majstrovstvá Topoľčian v tenise</h1>
 
-<hr>
-<h4 class="text-center">Švajčiarsky systém žrebovania</h4>
-<p class="text-justify">
-  Tento systém žrebovania je založený na tom, že v každom kole sa vyžrebujú súperi,
-  ktorí majú rovnaký alebo približne rovnaký počet víťazstiev - bodov.
-</p>
-<p class="text-justify">
-  Žrebovanie prvého kola - všetci hráči majú pred vyžrebovaním prvého kola 0 víťazstiev.
-  Počítač vyžrebuje dvojice súperov, aj vzhľadom na nasadenie. V tomto prvom kole sa stretnú aj
-  hráči rôznych herných úrovní.
-</p>
-<p class="text-justify">
-  Žrebovanie druhého kola - polovica hráčov po prvom kole má jedno víťazstvo - 1 bod a polovica
-  hráčov má nula víťazstiev - 0 bodov. Počítač vyžrebuje hráčov tak, aby 1-bodoví hrali
-  s 1-bodovými a 0-bodoví s 0-bodovými.
-</p>
-<p class="text-justify">
-  Žrebovanie tretieho kola - hráči po druhom kole majú 0 bodov, 1 bod a 2 body.
-  Počítač vyžrebuje hráčov tak, aby 2-bodoví hrali s 2-bodovými, 1-bodoví hrali s 1-bodovými
-  a 0-bodoví s 0-bodovými. Inak povedané, lepší hráči hrajú s lepšími, strední so strednými a slabší so slabšími.
-</p>
-<p class="text-justify">
-  ... A tak ďalej. Po 9. kole bude vyhodnotenie súťaže, kde budú hráči zoradení podľa počtu bodov.
-  Pomocným kritériom pri rovnosti bodov bude súčet všetkých bodov súperov.
-</p>
-<hr>
-<h4>Viac info a prihlásenie:</h4>
-<p class="text-center">
-  Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
-  Milan Kyseľ<br>
-  Andrej Golej<br>
-  <%= link_to root_url, root_url %><br>
-  <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
-</p>
+    <h3 class="text-center pt-5">
+      Súťaž je určená pre každého, kto si chce zahrať tenis s vyrovnanými súpermi počas celej sezóny,
+      na ktorýchkoľvek kurtoch v Topoľčanoch
+    </h3>
+
+    <hr>
+    <h4 class="text-center pt-5">Princíp súťaže</h4>
+    <p class="text-justify">
+      Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol, pričom každé kolo trvá dva týždne.
+      Jednotlivé kolá základnej časti súťaže sa žrebujú <a href="#swiss-tossing-system">švajčiarskym systémom</a> (vysvetlené nižšie),
+      ktorý zabezpečí, že väčšinu zápasov súťaže hrajú lepší hráči s lepšími, strední so strednými a slabší so slabšími.
+      Na odohratie každého zápasu v kole majú hráči vždy 2 týždne, potom začína ďalšie kolo súťaže.
+    </p>
+    <p class="text-justify">
+      Každý hráč odohrá v každom kole jeden zápas v čase, ktorý obom hráčom vyhovuje a na ktorom
+      sa sami telefonicky dohodnú.
+    </p>
+    <p class="text-justify">
+      Zápas sa hrá sa na 2 víťazné sety, pri skóre 1:1 na sety je 3 .set supertiebreak do 10 (min. rozdiel musí byť 2 body).
+      Hráči sa pred zápasom môžu dohodnúť, že 3.set odohrajú klasickým spôsobom.
+    </p>
+    <p class="text-justify">
+      Hráč napísaný v zápase ako prvý vyberie, zarezervuje a zaplatí kurt, na ktorom sa zápas odohrá.
+      Hráč napísaný ako druhý prinesie na zápas <strong>nové</strong> lopty. Každý hráč bude približne rovnaký počet
+      krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú DUNLOP FORT, WILSON AO, HEAD ATP.
+      <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
+    </p>
+    <p class="text-justify">
+      Po skončení základnej časti súťaže bude nasledovať finálový víkend,
+      počas ktorého sa stretnú 2 najvyššie postavení hráči z každej kategórie, do ktorých sú hráči na začiatku sezóny zaradení.
+      <ul>
+        <li>
+          Neregistrovaní (alebo registrovaní vo veku 35 rokov a viac)
+        </li>
+        <li>
+          60 roční a starší
+        </li>
+        <li>
+          50 roční a starší
+        </li>
+        <li>
+          Registrovaní a bývalí registrovaní
+        </li>
+        <li>
+          Ženy
+        </li>
+      </ul>
+    </p>
+
+    <h4 class="text-center pt-5">Spôsob bodovania</h4>
+    <p class="text-justify">
+      V každom zápase sa hrá o 3 body. V prípade výsledku 2:0 na sety sa body rozdelujú v pomere 3:0 v prospech víťaza.
+      V prípade výsledku 2:1 sa body rozdelujú v pomere 2:1 v prospech víťaza.
+    </p>
+
+    <h4 class="text-center pt-5" id="swiss-tossing-system">Švajčiarsky systém žrebovania</h4>
+    <p class="text-justify">
+      Tento systém žrebovania je založený na tom, že v každom kole sa vyžrebujú súperi,
+      ktorí majú aktuálne rovnaký alebo približne rovnaký počet bodov.
+    </p>
+    <p class="text-justify">
+      Žrebovanie prvého kola - všetci hráči majú pred vyžrebovaním prvého kola 0 bodov.
+      Počítač vyžrebuje dvojice súperov, pričom v tomto prvom kole sa stretnú aj
+      hráči rôznych herných úrovní.
+    </p>
+    <p class="text-justify">
+      Žrebovanie druhého kola - hráči majú aktuálne 0 až 3 body podľa výsledku svojho zápasu v 1. kole.
+      Počítač vyžrebuje hráčov tak, aby 0-bodoví hrali s 0-bodovými, 1-bodoví s 1-bodovými, 2-bodoví s 2-bodovými a
+      3-bodoví s 3-bodovými. Algoritmus žrebovania takto funguje v každom nasledujúcom kole, pričom opakovaný zápas
+      hráčov, ktorí sa v sezóne už stretli je vylúčený. Niekedy sa teda môže stať, že hráčovi už nevychádza rovnako
+      bodovaný hráč, no aj tak mu bude pridelený hráč blízkej bodovej úrovne.
+    </p>
+    <p class="text-justify">
+      Hráči sú priebežne zoraďovaní do rebríčka, ktorý sa mení každým odohratým kolom. Zoradenie v rámci kola je dané dvomi hlavnými
+      kritériami a to je: 1. počet bodov získaných do tohto kola a 2. súčet bodov hráčových súperov po dané kolo.
+      Po poslednom kole základnej časti sa vyhodnotia jednotlivé kategórie, do ktorých sú hráči pridelení na začiatku sezóny.
+      Počas finálového víkendu sa stretnú dvaja najvyššie postavení hráči z každej kategórie zvlášť.
+    </p>
+
+    <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
+    <p class="text-center">
+      Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
+      Milan Kyseľ<br>
+      Andrej Golej<br>
+      <%= link_to root_url, root_url %><br>
+      <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
+    </p>
+  </div>
+  <div class="col-md-3 hidden-sm-down"></div>
+</div>
