About page content changed

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,7 @@
 
     <h3 class="text-center pt-5">
       Súťaž je určená pre každého, kto si chce zahrať tenis s vyrovnanými súpermi počas celej sezóny,
-      na ktorýchkoľvek kurtoch v Topoľčanoch
+      na ktorýchkoľvek kurtoch v Topoľčanoch.
     </h3>
 
     <hr>
@@ -14,15 +14,15 @@
       Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol, pričom každé kolo trvá dva týždne.
       Jednotlivé kolá základnej časti súťaže sa žrebujú <a href="#swiss-tossing-system">švajčiarskym systémom</a> (vysvetlené nižšie),
       ktorý zabezpečí, že väčšinu zápasov súťaže hrajú lepší hráči s lepšími, strední so strednými a slabší so slabšími.
-      Na odohratie každého zápasu v kole majú hráči vždy 2 týždne, potom začína ďalšie kolo súťaže.
+      Na odohratie každého zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže.
     </p>
     <p class="text-justify">
-      Každý hráč odohrá v každom kole jeden zápas v čase, ktorý obom hráčom vyhovuje a na ktorom
+      Každý hráč odohrá v každom kole jeden zápas, a to v čase, ktorý obom hráčom vyhovuje a na ktorom
       sa sami telefonicky dohodnú.
     </p>
     <p class="text-justify">
-      Zápas sa hrá sa na 2 víťazné sety, pri skóre 1:1 na sety je 3 .set supertiebreak do 10 (min. rozdiel musí byť 2 body).
-      Hráči sa pred zápasom môžu dohodnúť, že 3.set odohrajú klasickým spôsobom.
+      Zápas sa hrá sa na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
+      Hráči sa pred zápasom môžu dohodnúť, že prípadný tretí set odohrajú klasickým spôsobom.
     </p>
     <p class="text-justify">
       Hráč napísaný v zápase ako prvý vyberie, zarezervuje a zaplatí kurt, na ktorom sa zápas odohrá.
@@ -31,8 +31,14 @@
       <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
     </p>
     <p class="text-justify">
-      Po skončení základnej časti súťaže bude nasledovať finálový víkend,
-      počas ktorého sa stretnú 2 najvyššie postavení hráči z každej kategórie, do ktorých sú hráči na začiatku sezóny zaradení.
+      Každý hráč je na začiatku sezóny zaradený do jednej z piatich kategórií, no počas základnej časti súťaže
+      sa v zápasoch stretávajú hráči všetkých kategórií, podľa spomenutého <a href="#swiss-tossing-system">švajčiarského
+      systému žrebovania</a>.
+      Po skončení základnej časti súťaže bude nasledovať <strong>finálový víkend</strong>,
+      počas ktorého sa stretnú dvaja najvyššie postavení hráči v každej kategórii.
+    </p>
+    <p>Kategórie sú nasledovné</p>
+    <p>
       <ul>
         <li>
           Neregistrovaní (alebo registrovaní vo veku 35 rokov a viac)
@@ -57,6 +63,10 @@
       V každom zápase sa hrá o 3 body. V prípade výsledku 2:0 na sety sa body rozdelujú v pomere 3:0 v prospech víťaza.
       V prípade výsledku 2:1 sa body rozdelujú v pomere 2:1 v prospech víťaza.
     </p>
+    <p class="text-justify">
+      Hráči sú priebežne zoraďovaní do rebríčka, ktorý sa mení každým odohratým kolom. Zoradenie v rámci kola je dané <strong>dvomi hlavnými
+      kritériami</strong> a to je: 1. počet bodov získaných do tohto kola a 2. súčet bodov hráčových súperov po dané kolo.
+    </p>
 
     <h4 class="text-center pt-5" id="swiss-tossing-system">Švajčiarsky systém žrebovania</h4>
     <p class="text-justify">
@@ -74,12 +84,6 @@
       3-bodoví s 3-bodovými. Algoritmus žrebovania takto funguje v každom nasledujúcom kole, pričom opakovaný zápas
       hráčov, ktorí sa v sezóne už stretli je vylúčený. Niekedy sa teda môže stať, že hráčovi už nevychádza rovnako
       bodovaný hráč, no aj tak mu bude pridelený hráč blízkej bodovej úrovne.
-    </p>
-    <p class="text-justify">
-      Hráči sú priebežne zoraďovaní do rebríčka, ktorý sa mení každým odohratým kolom. Zoradenie v rámci kola je dané dvomi hlavnými
-      kritériami a to je: 1. počet bodov získaných do tohto kola a 2. súčet bodov hráčových súperov po dané kolo.
-      Po poslednom kole základnej časti sa vyhodnotia jednotlivé kategórie, do ktorých sú hráči pridelení na začiatku sezóny.
-      Počas finálového víkendu sa stretnú dvaja najvyššie postavení hráči z každej kategórie zvlášť.
     </p>
 
     <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
