About page content changed

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,8 +21,8 @@
       sa sami telefonicky dohodnú.
     </p>
     <p class="text-justify">
-      Zápas sa hrá sa na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
-      Hráči sa pred zápasom môžu dohodnúť, že prípadný tretí set odohrajú klasickým spôsobom.
+      Zápas sa hrá na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
+      Hráči sa pred zápasom môžu dohodnúť, že prípadný tretí set odohrajú štandardným spôsobom.
     </p>
     <p class="text-justify">
       Hráč napísaný v zápase ako prvý vyberie, zarezervuje a zaplatí kurt, na ktorom sa zápas odohrá.
@@ -84,6 +84,14 @@
       3-bodoví s 3-bodovými. Algoritmus žrebovania takto funguje v každom nasledujúcom kole, pričom opakovaný zápas
       hráčov, ktorí sa v sezóne už stretli je vylúčený. Niekedy sa teda môže stať, že hráčovi už nevychádza rovnako
       bodovaný hráč, no aj tak mu bude pridelený hráč blízkej bodovej úrovne.
+    </p>
+    <hr>
+    <p class="text-justify">
+      <i>
+        Organizátor súťaže môže pre zatraktívnenie, alebo zefektívnenie súťaže urobiť výnimky v žrebovaní, alebo
+        priraďovaní hráčov na zápasy, ak si to situácia z nejakých dôvodov vyžaduje. Prvé a druhé kolo súťaže bude žrebované
+        ťahaním lístočkov so zapojením všetkých prítomných hráčov.
+      </i>
     </p>
 
     <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
