--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -53,7 +53,11 @@
         <% @rankings.each_with_index do |ranking, i| %>
           <tr class="<%= rankings_table_row_color_class(ranking) %>">
             <td><%= i + 1 %></td>
-            <td><span class="js-filterable"><%= link_to(player_name_by_consent(ranking.player, current_user), player_path(ranking.player), class: 'quiet-link') %></span></td>
+            <td>
+              <span class="js-filterable">
+                <%= player_name_link(ranking.player, current_user) %>
+              </span>
+            </td>
             <td><%= ranking.player.category.name %></td>
             <td><%= ranking.points %></td>
             <td><%= ranking.handicap %></td>
