--- a/app/views/articles/_tile.html.erb
+++ b/app/views/articles/_tile.html.erb
@@ -1,7 +1,7 @@
-<div class="card my-2 <%= 'bg-dark' unless article.published? %>">
+<div class="card my-2">
   <div class="card-body">
     <div class="clearfix">
-      <h3 class="card-title float-left">
+      <h3 class="card-title float-left <%= 'text-secondary' unless article.published? %>">
         <%= link_to article.title, article_path(article), class: 'quiet-link' %>
       </h3>
       <p class="float-right text-secondary">
@@ -11,10 +11,14 @@
         </small>
       </p>
     </div>
-    <p class="card-text">
-      <%= article.content[0...ArticlesHelper::PREVIEW_CONTENT_MAX_LENGTH] %>
-      <% if article.content.length > ArticlesHelper::PREVIEW_CONTENT_MAX_LENGTH %>
-        ... <%= link_to('(dočítať celé)', article_path(article)) %>
+    <p class="card-text <%= 'text-secondary' unless article.published? %>">
+      <% if article.published? %>
+        <%= article.content[0...ArticlesHelper::PREVIEW_CONTENT_MAX_LENGTH] %>
+        <% if article.content.length > ArticlesHelper::PREVIEW_CONTENT_MAX_LENGTH %>
+          ... <%= link_to('(dočítať celé)', article_path(article)) %>
+        <% end %>
+      <% else %>
+        <span class="text-secondary">(NEZVEREJNENÉ)</span>
       <% end %>
     </p>
   </div>
