Added hot announcement element

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -58,7 +58,7 @@
       </ul>
     </p>
 
-    <h4 class="text-center pt-5">Spôsob bodovania</h4>
+    <h4 class="text-center pt-5" id="pointing-system">Spôsob bodovania</h4>
     <p class="text-justify">
       V každom zápase sa hrá o 3 body. V prípade výsledku 2:0 na sety sa body rozdelujú v pomere 3:0 v prospech víťaza.
       V prípade výsledku 2:1 sa body rozdelujú v pomere 2:1 v prospech víťaza.
