--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= render 'payments/payment_balance' %>
     <% end %>
     <%= render 'shared/navbar' %>
+    <%= render 'shared/hot_announcement' %>
     <%= render 'shared/flash_message' unless flash.blank? %>
     <div class="img-banner mb-2"></div>
     <div class="container-fluid">
