Changed text on About page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -64,8 +64,9 @@
       V prípade výsledku 2:1 sa body rozdelujú v pomere 2:1 v prospech víťaza.
     </p>
     <p class="text-justify">
-      Hráči sú priebežne zoraďovaní do rebríčka, ktorý sa mení každým odohratým kolom. Zoradenie v rámci kola je dané <strong>dvomi hlavnými
-      kritériami</strong> a to je: 1. počet bodov získaných do tohto kola a 2. súčet bodov hráčových súperov po dané kolo.
+      Hráči sú priebežne zoraďovaní do rebríčka, ktorý sa mení každým odohratým zápasom. Zoradenie hráčov v rámci aktuálne
+      zvoleného kola je dané <strong>dvomi hlavnými kritériami</strong> a to je: 1) počet bodov získaných do tohto kola (vrátane)
+      a 2) súčet bodov hráčových súperov po dané kolo (vrátane).
     </p>
 
     <h4 class="text-center pt-5" id="swiss-tossing-system">Švajčiarsky systém žrebovania</h4>
