Changed text on About page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -14,11 +14,10 @@
       Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol, pričom každé kolo trvá dva týždne.
       Jednotlivé kolá základnej časti súťaže sa žrebujú <a href="#swiss-tossing-system">švajčiarskym systémom</a> (vysvetlené nižšie),
       ktorý zabezpečí, že väčšinu zápasov súťaže hrajú lepší hráči s lepšími, strední so strednými a slabší so slabšími.
-      Na odohratie každého zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže.
     </p>
     <p class="text-justify">
       Každý hráč odohrá v každom kole jeden zápas, a to v čase, ktorý obom hráčom vyhovuje a na ktorom
-      sa sami telefonicky dohodnú.
+      sa sami telefonicky dohodnú. Na odohratie zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže.
     </p>
     <p class="text-justify">
       Zápas sa hrá na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
@@ -26,7 +25,7 @@
     </p>
     <p class="text-justify">
       Hráč napísaný v zápase ako prvý vyberie, zarezervuje a zaplatí kurt, na ktorom sa zápas odohrá.
-      Hráč napísaný ako druhý prinesie na zápas <strong>nové</strong> lopty. Každý hráč bude približne rovnaký počet
+      Hráč napísaný ako druhý prinesie na zápas <strong><u>nové</u></strong> lopty. Každý hráč bude približne rovnaký počet
       krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú DUNLOP FORT, WILSON AO, HEAD ATP.
       <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
     </p>
