--- a/app/views/pages/season2020.html.erb
+++ b/app/views/pages/season2020.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-md-3 hidden-sm-down"></div>
   <div class="col">
-    <h1 class="display-2 text-center"><small>Začína sezóna</small> <strong>2020!</strong></h1>
+    <h1 class="display-3 text-center">
+      Začína sezóna <strong>2020!</strong>
+    </h1>
 
     <hr>
     <h2 class="text-center pt-5">
