--- a/app/views/pages/season2020.html.erb
+++ b/app/views/pages/season2020.html.erb
@@ -14,10 +14,22 @@
       ďalšiu sezónu a pokračovať v napínavých dvojtýždňových letných zápoleniach!
       Veríme, že ste si minulú sezónu dobre zahrali a tiež sa už neviete dočkať
       prvého outdoorového úderu v tomto roku :-)
-      Kurty sa už pripravujú a od 1. apríla sa v bare na kurtoch v parku
-      môžete hlásiť do súťaže sezóny 2020.
     </p>
-    <p class="text-justify lead">
+    <div class="p-4 bg-yellow">
+      <h2 class="text-center">
+        Vírus vedie 2:0 v prvom sete :-/
+      </h2>
+      <p class="text-justify lead">
+        Ako asi tušíte, v súčasnej dobe nevieme s istotou povedať, ako sa vyvinie
+        situácie ohľadom pandémie Corona vírusu a kedy nám bude umožnené spustiť
+        prihlasovanie a následne súťaž samotnú. Akonáhle sa bude dať situácia
+        odhadnúť, budeme vás informovať emailom a rovnako nájdete všetky informácie
+        tu, na stránke súťaže. Veríme, že ak všetci budú zodpovední a budú dodržovať
+        nekompromisné izolačné opatrenia, budeme môcť začať čím skôr.
+        Kurty sa už pripravujú a budú na vás čakať.
+      </p>
+    </div>
+    <p class="text-justify lead mt-3">
       Telefónne číslo na hlavného organizátora - Ondreja Babalu
       je <%= link_to_manager_phone %>, prípadne email
       <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>.
