Fixed typo on page

--- a/app/views/pages/season2020.html.erb
+++ b/app/views/pages/season2020.html.erb
@@ -21,7 +21,7 @@
       </h2>
       <p class="text-justify lead">
         Ako asi tušíte, v súčasnej dobe nevieme s istotou povedať, ako sa vyvinie
-        situácie ohľadom pandémie Corona vírusu a kedy nám bude umožnené spustiť
+        situácia ohľadom pandémie Corona vírusu a kedy nám bude umožnené spustiť
         prihlasovanie a následne súťaž samotnú. Akonáhle sa bude dať situácia
         odhadnúť, budeme vás informovať emailom a rovnako nájdete všetky informácie
         tu, na stránke súťaže. Veríme, že ak všetci budú zodpovední a budú dodržovať
