--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -11,37 +11,42 @@
 </div>
 <hr>
 
-<% if @success_of_play.values.select { |v| !v.blank? }.any? %>
-  <div class="row">
-    <div class="col">
-      <p class="lead text-center">
-        Úspešnosť hry
-        <span data-toggle="tooltip" data-placement="top" title="Pomer vyhratých gemov ku všetkým odohratým">
-          <%= fa_icon 'question-circle' %>
-        </span>
-      </p>
-    </div>
+<div class="row">
+  <div class="col">
+    <p class="lead text-center">
+      Úspešnosť hry
+      <span data-toggle="tooltip" data-placement="top" title="Pomer vyhratých gemov ku všetkým odohratým">
+        <%= fa_icon 'question-circle' %>
+      </span>
+    </p>
   </div>
-  <div class="row">
-    <div class="col-12 col-md-6">
-      <div class="card mb-3 <%= success_of_play_color_class(@success_of_play[:season]) %>">
-        <div class="card-header"><%= "V sezóne #{selected_season.name}" %></div>
-        <div class="card-body">
-          <h5 class="card-title"><%= @success_of_play[:season] ? "#{@success_of_play[:season]}%" : '(žiadne zápasy)' %></h5>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-6">
-      <div class="card mb-3 <%= success_of_play_color_class(@success_of_play[:history]) %>">
-        <div class="card-header">V histórii súťaže</div>
-        <div class="card-body">
-          <h5 class="card-title"><%= @success_of_play[:history] ? "#{@success_of_play[:history]}%" : '(žiadne zápasy)' %></h5>
-        </div>
+</div>
+<div class="row">
+  <div class="col-12 col-md-6">
+    <div class="card mb-3 <%= success_of_play_color_class(@success_of_play.dig(:season, :percentage)) %>">
+      <div class="card-header"><%= "V sezóne #{selected_season.name}" %></div>
+      <div class="card-body">
+        <h5 class="card-title">
+          <%= @success_of_play.dig(:season, :all_games).zero? ? '(žiadne zápasy)' : "#{@success_of_play.dig(:season, :percentage)}%" %>
+        </h5>
+        <div id="chart-season" style="width: 100%; height: 280px;"></div>
       </div>
     </div>
   </div>
-  <hr>
-<% end %>
+  <div class="col-12 col-md-6">
+    <div class="card mb-3 <%= success_of_play_color_class(@success_of_play.dig(:history, :percentage)) %>">
+      <div class="card-header">V histórii súťaže</div>
+      <div class="card-body">
+        <h5 class="card-title">
+          <%= @success_of_play.dig(:history, :all_games).zero? ? '(žiadne zápasy)' : "#{@success_of_play.dig(:history, :percentage)}%" %>
+        </h5>
+        <div id="chart-history" style="width: 100%; height: 280px;"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<hr>
+
 <div class="row">
   <div class="col-sm-12 col-md-6">
     <div class="jumbotron jumbotron-fluid">
@@ -111,3 +116,5 @@
     </div>
   </div>
 <% end %>
+
+<%= render 'apexcharts' %>
